Fixed leaflet maps not showing on pages

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -334,7 +334,7 @@ input[type="checkbox"] {
 
 // Map
 
-#map {
+#project-map {
   min-width: 400px;
   min-height: 400px;
   margin: auto;
